# flashcards_generator

./: .gitignore  LICENSE  README.md  app.py  flashcards.json  pyproject.toml
example_data/: flashcards.json
flashcards_generator/: app.py  constants.py  flashcard.py  flashcards.ipynb  import_export_page.py  show_generator_page.py
